--- a/index.html
+++ b/index.html
@@ -74,8 +74,6 @@
   </head>
   <body>
     <section id="header">
-      <!-- <h1 class="title one">いただきます</h1>
-      <h1 class="title two">ごちごちそうさま</h1> -->
       <div class="inner">
         <a href="#" id="logo-outline"
           ><img id="logo" src="./Anime Food/logo.jpg"
@@ -120,18 +118,10 @@
           <source src="./Anime Food/IMG_7613.mp4" type="video/mp4" />
         </video>
       </div>
-      <!-- not displayed -->
       <div class="video-box bento">
-        <!-- <video id="bento" height="300" loop autoplay muted>
-          <source
-            class="loading"
-            src="./Anime Food/donut.gif"
-            type="video/mp4"
-          />
-        </video> -->
         <img id="gif" src="Anime Food/donut.gif" width="200px" />
       </div>
-      <!--  -->
+
       <div class="video-box cup load" id="cup">
         <video id="cup" height="300" loop autoplay muted>
           <source src="./Anime Food/IMG_7592.mp4" type="video/mp4" />
@@ -142,9 +132,6 @@
           <source src="./Anime Food/IMG_7619.mp4" type="video/mp4" />
         </video>
       </div>
-      <!-- <div class="video-box pink"></div> -->
-      <!-- <div class="video-box yellow"></div> -->
-      <!-- <div class="video-box blue"></div> -->
     </section>
     <section id="about">
       <div class="about-box">
@@ -155,23 +142,14 @@
         </p>
         <p>Images used for educational purposes</p>
       </div>
-      <div class="grid loading"></div>
+      <div class="grid">
+        <img src="Anime Food/Sushi Rice Yum.gif" class="loading" />
+      </div>
     </section>
-    <!-- <section id="menu"> -->
-    <!-- <img src="./Anime Food/menu.svg" /> -->
-    <!-- <div class="outline">
-        <p>Check out our IG for menu details</p>
-        <img
-          src="https://cdn3.iconfinder.com/data/icons/transparent-on-dark-grey/500/icon-04-512.png"
-          width="40px"
-        />
-      </div> -->
-    <!-- </section> -->
     <section id="store"></section>
     <div id="background">
       <div id="background-esc" onclick="esc()"></div>
       <div id="popup">
-        <!-- <div id="X" onclick="esc()">X</div> -->
         <img
           src="./Anime Food/add-button-inside-black-circle.svg"
           onclick="esc()"
